--- a/example/web/index.html
+++ b/example/web/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Overpass example</title>
+    <title>Overpass</title>
+    <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
+    <div id="app"></div>
     <script src="js/app.js"></script>
   </body>
 </html>
