--- a/example/web/index.html
+++ b/example/web/index.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <title>Overpass</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="mobile-web-app-capable" content="yes">
+
     <link rel="stylesheet" type="text/css" href="css/app.css">
   </head>
   <body>
