--- a/example/web/index.html
+++ b/example/web/index.html
@@ -5,8 +5,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="Overpass">
+    <meta name="application-name" content="Overpass">
+    <meta name="theme-color" content="#865cd6">
 
     <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#865cd6">
   </head>
   <body>
     <div id="app"></div>
