Renamed Overpass to Rinq in all example code. Example server currently broken.

--- a/example/client/web/index.html
+++ b/example/client/web/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Overpass</title>
+    <title>Rinq</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Overpass">
-    <meta name="application-name" content="Overpass">
+    <meta name="apple-mobile-web-app-title" content="Rinq">
+    <meta name="application-name" content="Rinq">
     <meta name="theme-color" content="#865cd6">
 
     <link rel="stylesheet" type="text/css" href="css/app.css">
